--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ go:
 - 1.11
 install:
 - pip install --user behave requests
+- go get github.com/kisielk/errcheck
 script:
 - GO111MODULE=on go vet ./...
 - GO111MODULE=on go test ./...
+- errcheck
 - GO111MODULE=on CGO_ENABLED=0 go build -a -installsuffix cgo .
 - behave
 deploy:
